KAFKA/KAFKA_CONNECT/plugins-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: kafka-connect
spec:
  template:
    spec:
      volumes:
        - name: plugins
          hostPath:
            path: /opt/k3s/services/kafka-connect/connectores
            type: DirectoryOrCreate
      containers:
        - name: kafka-connect
          volumeMounts:
            - name: plugins
              mountPath: /opt/plugins
