KAFKA/KAFKA_CONNECT/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: kafka-connect
spec:
  template:
    spec:
      containers:
        - name: kafka-connect
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
