KAFKA/KAFKA_CONNECT/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  namespace: kafka-connect
  labels:
    app: kafka-connect
spec:
  type: ClusterIP
  selector:
    app: kafka-connect
  ports:
    - name: http
      port: 8083
      targetPort: 8083
